--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "build": "ng build",
     "build:demo": "ng build demo --prod",
+    "build:example": "ng build example --prod",
     "build:lib": "ng build ng-in-viewport --prod",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
     "contributors:add": "all-contributors add",
@@ -19,9 +20,12 @@
     "lint": "ng lint && yarn run lint:demo-e2e",
     "lint:demo": "ng lint demo",
     "lint:demo-e2e": "eslint \"projects/demo-e2e/src/**/*.{js,ts}\"",
+    "lint:example": "ng lint example",
     "lint:lib": "ng lint ng-in-viewport",
     "ng": "ng",
     "start": "ng serve",
+    "start:demo": "ng serve demo",
+    "start:example": "ng serve example",
     "test": "jest",
     "test:demo": "jest --config=projects/demo/jest.config.js",
     "test:lib": "jest --config=projects/ng-in-viewport/jest.config.js"
@@ -31,10 +35,12 @@
   },
   "dependencies": {
     "@angular/animations": "11.1.2",
+    "@angular/cdk": "11.1.2",
     "@angular/common": "11.1.2",
     "@angular/compiler": "11.1.2",
     "@angular/core": "11.1.2",
     "@angular/forms": "11.1.2",
+    "@angular/material": "11.1.2",
     "@angular/platform-browser": "11.1.2",
     "@angular/platform-browser-dynamic": "11.1.2",
     "@angular/router": "11.1.2",
@@ -71,7 +77,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "5.0.4",
     "is-ci": "2.0.0",
-    "jest": "26.6.3",
+    "jest": "27.0.0-next.2",
     "jest-preset-angular": "9.0.0-next.3",
     "lint-staged": "10.5.4",
     "markdownlint-cli2": "0.0.13",
@@ -81,6 +87,7 @@
     "prettier-plugin-packagejson": "2.2.9",
     "rimraf": "3.0.2",
     "serve": "11.3.2",
+    "ts-jest": "27.0.0-next.5",
     "ts-node": "9.1.1",
     "typedoc": "0.20.22",
     "typescript": "4.0.5"
