--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,11 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "Node",
     "importHelpers": true,
-    "target": "es2015",
-    "module": "es2020",
-    "lib": ["es2018", "dom"],
+    "target": "ES2015",
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "paths": {
       "ng-in-viewport": ["dist/ng-in-viewport"]
     }
