--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,31 +2,11 @@
   "root": true,
   "ignorePatterns": ["projects/**/*"],
   "plugins": ["header"],
-  "rules": {
-    "header/header": [
-      2,
-      "block",
-      [
-        "!",
-        " * @license",
-        {
-          "pattern": " * Copyright \\(c\\) \\d{4} Piotr Stępniewski \\<k3nsei\\.pl@gmail\\.com\\>",
-          "template": " * Copyright (c) 2020 Piotr Stępniewski <k3nsei.pl@gmail.com>"
-        },
-        " *",
-        " * Use of this source code is governed by an MIT-style license that can be",
-        " * found in the LICENSE file in the root directory of this source tree.",
-        " "
-      ],
-      2
-    ]
-  },
   "overrides": [
     {
       "files": ["*.ts"],
       "parserOptions": {
-        "project": ["tsconfig.json"],
-        "createDefaultProgram": true
+        "project": ["./tsconfig.json", "./tsconfig.*?.json"]
       },
       "extends": [
         "plugin:@angular-eslint/ng-cli-compat",
@@ -34,7 +14,51 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
-        "@typescript-eslint/no-inferrable-types": "off"
+        "header/header": [
+          2,
+          "block",
+          [
+            "!",
+            " * @license",
+            {
+              "pattern": " * Copyright \\(c\\) \\d{4} Piotr Stępniewski \\<k3nsei\\.pl@gmail\\.com\\>",
+              "template": " * Copyright (c) 2020 Piotr Stępniewski <k3nsei.pl@gmail.com>"
+            },
+            " *",
+            " * Use of this source code is governed by an MIT-style license that can be",
+            " * found in the LICENSE file in the root directory of this source tree.",
+            " "
+          ],
+          2
+        ],
+        "@typescript-eslint/no-inferrable-types": "off",
+        "@typescript-eslint/naming-convention": [
+          "error",
+          {
+            "selector": "default",
+            "format": ["camelCase"],
+            "leadingUnderscore": "allow",
+            "trailingUnderscore": "allow"
+          },
+          {
+            "selector": "variable",
+            "format": ["camelCase", "UPPER_CASE"],
+            "leadingUnderscore": "allow",
+            "trailingUnderscore": "allow"
+          },
+          {
+            "selector": "typeLike",
+            "format": ["PascalCase"]
+          },
+          {
+            "selector": "enum",
+            "format": ["PascalCase", "UPPER_CASE"]
+          },
+          {
+            "selector": "memberLike",
+            "format": ["camelCase", "PascalCase", "UPPER_CASE"]
+          }
+        ]
       }
     },
     {
