--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -29,13 +29,15 @@ jobs:
         run: yarn run format:check
       - name: Lint
         run: |
-          yarn run lint:lib
           yarn run lint:demo
           yarn run lint:demo-e2e
+          yarn run lint:example
+          yarn run lint:lib
       - name: Build
         run: |
           yarn run build:lib
           yarn run build:demo --progress=false
+          yarn run build:example --progress=false
       - name: Upload library build artifact
         uses: actions/upload-artifact@v2
         with:
@@ -46,6 +48,11 @@ jobs:
         with:
           name: ng-in-viewport-demo
           path: dist/demo
+      - name: Upload example build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: ng-in-viewport-example
+          path: dist/example
       - name: Test
         run: yarn run test --ci --coverage
       - name: Upload coverage
