--- a/.github/workflows/E2E_DEMO.yml
+++ b/.github/workflows/E2E_DEMO.yml
@@ -18,11 +18,16 @@ jobs:
         uses: actions/setup-node@v2-beta
         with:
           node-version: '${{ steps.nvm.outputs.NODE_VERSION }}'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir
+        run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Restore dependencies cache
         uses: actions/cache@v2
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+          path: ${{ steps.yarn-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-dependencies-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-dependencies-
       - name: Install dependencies
         run: yarn install --frozen-lockfile --silent
       - name: Build library
