--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "5.0.4",
     "is-ci": "2.0.0",
-    "jest": "27.0.0-next.2",
+    "jest": "26.6.3",
     "jest-preset-angular": "9.0.0-next.3",
     "lint-staged": "10.5.4",
     "markdownlint-cli2": "0.0.13",
