--- a/package.json
+++ b/package.json
@@ -34,30 +34,30 @@
     "webpack": "^5.21.1"
   },
   "dependencies": {
-    "@angular/animations": "11.2.0",
+    "@angular/animations": "12.0.0-next.0",
     "@angular/cdk": "11.2.0",
-    "@angular/common": "11.2.0",
-    "@angular/compiler": "11.2.0",
-    "@angular/core": "11.2.0",
-    "@angular/forms": "11.2.0",
+    "@angular/common": "12.0.0-next.0",
+    "@angular/compiler": "12.0.0-next.0",
+    "@angular/core": "12.0.0-next.0",
+    "@angular/forms": "12.0.0-next.0",
     "@angular/material": "11.2.0",
-    "@angular/platform-browser": "11.2.0",
-    "@angular/platform-browser-dynamic": "11.2.0",
-    "@angular/router": "11.2.0",
+    "@angular/platform-browser": "12.0.0-next.0",
+    "@angular/platform-browser-dynamic": "12.0.0-next.0",
+    "@angular/router": "12.0.0-next.0",
     "intersection-observer": "0.12.0",
     "rxjs": "6.6.3",
     "tslib": "2.1.0",
     "zone.js": "0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1102.0",
+    "@angular-devkit/build-angular": "0.1200.0-next.0",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "1.2.0",
     "@angular-eslint/schematics": "1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "11.2.0",
-    "@angular/compiler-cli": "11.2.0",
+    "@angular/cli": "12.0.0-next.0",
+    "@angular/compiler-cli": "12.0.0-next.0",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
     "@types/cypress": "1.1.3",
@@ -90,7 +90,7 @@
     "ts-jest": "27.0.0-next.5",
     "ts-node": "9.1.1",
     "typedoc": "0.20.24",
-    "typescript": "4.0.5"
+    "typescript": "4.1.5"
   },
   "engines": {
     "node": ">=14.0.0 <16.0.0",
