--- a/package.json
+++ b/package.json
@@ -47,16 +47,16 @@
     "intersection-observer": "0.12.0",
     "rxjs": "6.6.3",
     "tslib": "2.1.0",
-    "zone.js": "0.11.4"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.1200.0-next.0",
+    "@angular-devkit/build-angular": "0.1200.0-next.1",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "1.2.0",
     "@angular-eslint/schematics": "1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/cli": "12.0.0-next.0",
+    "@angular/cli": "12.0.0-next.1",
     "@angular/compiler-cli": "12.0.0-next.0",
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
@@ -81,7 +81,7 @@
     "jest-preset-angular": "9.0.0-next.3",
     "lint-staged": "10.5.4",
     "markdownlint-cli2": "0.0.13",
-    "ng-packagr": "11.2.2",
+    "ng-packagr": "12.0.0-next.2",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "1.1.1",
     "prettier-plugin-packagejson": "2.2.9",
