chore(deps): update angular to v12.0.0-next.2

--- a/projects/ng-in-viewport/tsconfig.spec.json
+++ b/projects/ng-in-viewport/tsconfig.spec.json
@@ -4,8 +4,7 @@
     "outDir": "../../out-tsc/spec",
     "module": "CommonJS",
     "types": ["node", "jest"],
-    "allowJs": true,
-    "emitDecoratorMetadata": true
+    "allowJs": true
   },
   "files": [],
   "include": ["**/*.spec.ts", "**/*.d.ts"]
