--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
   },
   "dependencies": {
     "@angular/animations": "12.0.0-next.4",
-    "@angular/cdk": "11.2.3",
+    "@angular/cdk": "12.0.0-next.2",
     "@angular/common": "12.0.0-next.4",
     "@angular/compiler": "12.0.0-next.4",
     "@angular/core": "12.0.0-next.4",
     "@angular/forms": "12.0.0-next.4",
-    "@angular/material": "11.2.3",
+    "@angular/material": "12.0.0-next.2",
     "@angular/platform-browser": "12.0.0-next.4",
     "@angular/platform-browser-dynamic": "12.0.0-next.4",
     "@angular/router": "12.0.0-next.4",
