--- a/package.json
+++ b/package.json
@@ -76,6 +76,8 @@
     "eslint-plugin-jsdoc": "32.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "5.2.0",
+    "import-sort": "6.0.0",
+    "import-sort-style-module": "6.0.0",
     "is-ci": "3.0.0",
     "jest": "26.6.3",
     "jest-preset-angular": "9.0.0-next.3",
@@ -83,8 +85,9 @@
     "markdownlint-cli2": "0.0.15",
     "ng-packagr": "12.0.0-next.6",
     "prettier": "2.2.1",
-    "prettier-plugin-organize-imports": "1.1.1",
+    "prettier-plugin-import-sort": "0.0.6",
     "prettier-plugin-packagejson": "2.2.10",
+    "prettier-plugin-sh": "0.6.0",
     "rimraf": "3.0.2",
     "serve": "11.3.2",
     "ts-jest": "27.0.0-next.9",
