--- a/projects/ng-in-viewport/.eslintrc.json
+++ b/projects/ng-in-viewport/.eslintrc.json
@@ -26,7 +26,9 @@
           }
         ],
         "@angular-eslint/no-input-rename": "off",
-        "@angular-eslint/no-output-rename": "off"
+        "@angular-eslint/no-output-rename": "off",
+        "@typescript-eslint/naming-convention": "off",
+        "no-underscore-dangle": "off"
       }
     },
     {
