--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@angular/platform-browser-dynamic": "12.0.0-next.7",
     "@angular/router": "12.0.0-next.7",
     "intersection-observer": "0.12.0",
-    "rxjs": "6.6.6",
+    "rxjs": "6.6.7",
     "tslib": "2.1.0",
     "zone.js": "~0.11.4"
   },
@@ -58,13 +58,13 @@
     "@angular-eslint/template-parser": "2.0.2",
     "@angular/cli": "12.0.0-next.7",
     "@angular/compiler-cli": "12.0.0-next.7",
-    "@commitlint/cli": "12.0.1",
-    "@commitlint/config-conventional": "12.0.1",
+    "@commitlint/cli": "12.1.1",
+    "@commitlint/config-conventional": "12.1.1",
     "@types/cypress": "1.1.3",
     "@types/jest": "26.0.22",
     "@types/node": "14.14.37",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.20.0",
+    "@typescript-eslint/parser": "4.20.0",
     "all-contributors-cli": "6.20.0",
     "codecov": "3.8.1",
     "conventional-changelog-cli": "2.1.1",
@@ -75,19 +75,19 @@
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "32.3.0",
     "eslint-plugin-prefer-arrow": "1.2.3",
-    "husky": "5.2.0",
+    "husky": "6.0.0",
     "is-ci": "3.0.0",
     "jest": "26.6.3",
     "jest-preset-angular": "9.0.0-next.3",
     "lint-staged": "10.5.4",
-    "markdownlint-cli2": "0.0.15",
-    "ng-packagr": "12.0.0-next.6",
+    "markdownlint-cli2": "0.1.1",
+    "ng-packagr": "12.0.0-next.7",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "1.1.1",
     "prettier-plugin-packagejson": "2.2.10",
     "rimraf": "3.0.2",
     "serve": "11.3.2",
-    "ts-jest": "27.0.0-next.9",
+    "ts-jest": "26.5.4",
     "ts-node": "9.1.1",
     "typedoc": "0.20.34",
     "typescript": "4.2.3"
