--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "eslint-plugin-prefer-arrow": "1.2.3",
     "husky": "6.0.0",
     "is-ci": "3.0.0",
-    "jest": "26.6.3",
-    "jest-preset-angular": "9.0.0-next.3",
+    "jest": "27.0.0-next.6",
+    "jest-preset-angular": "9.0.0-next.12",
     "lint-staged": "10.5.4",
     "markdownlint-cli2": "0.1.2",
     "ng-packagr": "12.0.0-next.9",
@@ -87,7 +87,7 @@
     "prettier-plugin-packagejson": "2.2.10",
     "rimraf": "3.0.2",
     "serve": "11.3.2",
-    "ts-jest": "26.5.5",
+    "ts-jest": "27.0.0-next.10",
     "ts-node": "9.1.1",
     "typedoc": "0.20.35",
     "typescript": "4.2.4"
