--- a/package.json
+++ b/package.json
@@ -34,30 +34,30 @@
     "webpack": "^5.21.1"
   },
   "dependencies": {
-    "@angular/animations": "12.0.0-next.9",
-    "@angular/cdk": "12.0.0-next.7",
-    "@angular/common": "12.0.0-next.9",
-    "@angular/compiler": "12.0.0-next.9",
-    "@angular/core": "12.0.0-next.9",
-    "@angular/forms": "12.0.0-next.9",
-    "@angular/material": "12.0.0-next.7",
-    "@angular/platform-browser": "12.0.0-next.9",
-    "@angular/platform-browser-dynamic": "12.0.0-next.9",
-    "@angular/router": "12.0.0-next.9",
+    "@angular/animations": "12.0.0-rc.3",
+    "@angular/cdk": "12.0.0-rc.3",
+    "@angular/common": "12.0.0-rc.3",
+    "@angular/compiler": "12.0.0-rc.3",
+    "@angular/core": "12.0.0-rc.3",
+    "@angular/forms": "12.0.0-rc.3",
+    "@angular/material": "12.0.0-rc.3",
+    "@angular/platform-browser": "12.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "12.0.0-rc.3",
+    "@angular/router": "12.0.0-rc.3",
     "intersection-observer": "0.12.0",
     "rxjs": "6.6.7",
     "tslib": "2.2.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "12.0.0-next.9",
+    "@angular-devkit/build-angular": "12.0.0-rc.3",
     "@angular-eslint/builder": "4.0.0",
     "@angular-eslint/eslint-plugin": "4.0.0",
     "@angular-eslint/eslint-plugin-template": "4.0.0",
     "@angular-eslint/schematics": "4.0.0",
     "@angular-eslint/template-parser": "4.0.0",
-    "@angular/cli": "12.0.0-next.9",
-    "@angular/compiler-cli": "12.0.0-next.9",
+    "@angular/cli": "12.0.0-rc.3",
+    "@angular/compiler-cli": "12.0.0-rc.3",
     "@commitlint/cli": "12.1.1",
     "@commitlint/config-conventional": "12.1.1",
     "@types/cypress": "1.1.3",
@@ -81,7 +81,7 @@
     "jest-preset-angular": "9.0.0-next.12",
     "lint-staged": "10.5.4",
     "markdownlint-cli2": "0.1.3",
-    "ng-packagr": "12.0.0-next.9",
+    "ng-packagr": "12.0.0-rc.3",
     "prettier": "2.2.1",
     "prettier-plugin-organize-imports": "1.1.1",
     "prettier-plugin-packagejson": "2.2.10",
