ci(release-please): increase package version in all files

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,6 +12,8 @@ jobs:
         with:
           release-type: node
           package-name: ng-in-viewport
+          extra-files: |
+            projects/ng-in-viewport/package.json
 
       - name: Checkout repository
         if: ${{ steps.release.outputs.release_created }}
