--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,6 +1,12 @@
 on:
   push:
     branches: [develop]
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: Why was the workflow triggered manually?
+        required: true
+        type: string
 
 name: release-please
 jobs:
@@ -8,11 +14,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Prepare release PR or move on with release when PR was accepted
+        id: release
         uses: google-github-actions/release-please-action@v3
         with:
           release-type: node
           package-name: ng-in-viewport
           extra-files: |
+            README.md
             projects/ng-in-viewport/package.json
 
       - name: Checkout repository
