--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,6 +1,12 @@
 on:
   push:
     branches: [develop]
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: Why was the workflow triggered manually?
+        required: true
+        type: string
 
 name: release-please
 jobs:
@@ -13,6 +19,7 @@ jobs:
           release-type: node
           package-name: ng-in-viewport
           extra-files: |
+            README.md
             projects/ng-in-viewport/package.json
 
       - name: Checkout repository
