--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,6 +1,12 @@
 on:
   push:
     branches: [develop]
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: 'Why was the workflow started manually?'
+        required: true
+        type: boolean
 
 name: release-please
 jobs:
