--- a/package.json
+++ b/package.json
@@ -31,53 +31,55 @@
     "watch:lib": "ng build ng-in-viewport --watch --configuration=development"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.2",
-    "@angular/cdk": "^15.1.2",
-    "@angular/common": "^15.1.2",
-    "@angular/compiler": "^15.1.2",
-    "@angular/core": "^15.1.2",
-    "@angular/forms": "^15.1.2",
-    "@angular/material": "^15.1.2",
-    "@angular/platform-browser": "^15.1.2",
-    "@angular/platform-browser-dynamic": "^15.1.2",
-    "@angular/router": "^15.1.2",
+    "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.0",
+    "@angular/common": "^15.2.0",
+    "@angular/compiler": "^15.2.0",
+    "@angular/core": "^15.2.0",
+    "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.0",
+    "@angular/platform-browser": "^15.2.0",
+    "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/router": "^15.2.0",
     "lodash-es": "^4.17.21",
     "rxjs": "^7.8.0",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.3",
-    "@angular-eslint/builder": "^15.2.0",
-    "@angular-eslint/eslint-plugin": "^15.2.0",
-    "@angular-eslint/eslint-plugin-template": "^15.2.0",
-    "@angular-eslint/schematics": "^15.2.0",
-    "@angular-eslint/template-parser": "^15.2.0",
-    "@angular/cli": "^15.1.3",
-    "@angular/compiler-cli": "^15.1.2",
-    "@commitlint/cli": "^17.4.2",
-    "@commitlint/config-conventional": "^17.4.2",
+    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular-eslint/builder": "^15.2.1",
+    "@angular-eslint/eslint-plugin": "^15.2.1",
+    "@angular-eslint/eslint-plugin-template": "^15.2.1",
+    "@angular-eslint/schematics": "^15.2.1",
+    "@angular-eslint/template-parser": "^15.2.1",
+    "@angular/cli": "^15.2.0",
+    "@angular/compiler-cli": "^15.2.0",
+    "@commitlint/cli": "^17.4.4",
+    "@commitlint/config-conventional": "^17.4.4",
     "@ngneat/spectator": "^14.0.0",
-    "@types/jest": "^28.1.8",
+    "@types/jest": "^29.4.0",
     "@types/lodash-es": "^4.17.6",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "@typescript-eslint/parser": "^5.50.0",
+    "@typescript-eslint/eslint-plugin": "^5.54.0",
+    "@typescript-eslint/parser": "^5.54.0",
     "all-contributors-cli": "^6.24.0",
-    "cypress": "^12.5.0",
-    "eslint": "^8.33.0",
+    "cypress": "^12.7.0",
+    "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-typescript": "^3.5.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^28.1.3",
-    "jest-preset-angular": "^12.2.6",
-    "lint-staged": "^13.1.0",
+    "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
+    "jest-preset-angular": "^13.0.0",
+    "lint-staged": "^13.1.2",
     "ng-mocks": "^14.6.0",
-    "ng-packagr": "^15.1.1",
-    "prettier": "2.8.3",
-    "prettier-plugin-packagejson": "^2.4.2",
+    "ng-packagr": "^15.2.2",
+    "prettier": "2.8.4",
+    "prettier-plugin-packagejson": "^2.4.3",
+    "ts-jest": "^29.0.5",
     "typescript": "~4.9.5"
   },
   "engines": {
