--- a/qodana.yml
+++ b/qodana.yml
@@ -3,3 +3,8 @@ linter: jetbrains/qodana-js:2022.3-eap
 failThreshold: 0
 profile:
   name: qodana.recommended
+exclude:
+  - name: All
+    paths:
+      - projects/demo-e2e
+      - projects/example-e2e
