--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,9 @@
 name: Main
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   push:
     branches: [stable, develop]
@@ -196,17 +200,3 @@ jobs:
         with:
           name: failed-example-e2e-videos
           path: projects/example-e2e/artifacts/videos
-
-  qodana:
-    name: Run code quality monitoring
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2022.3.3
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
