--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,5 +1,9 @@
 name: PR
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 on:
   pull_request:
     branches: [develop]
@@ -27,9 +31,9 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-pr-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
-            ${{ runner.os }}-node-pr-
+            ${{ runner.os }}-node-
 
       - name: Install dependencies
         run: npm ci
@@ -184,17 +188,3 @@ jobs:
         with:
           name: pr-failed-example-e2e-videos
           path: projects/example-e2e/artifacts/videos
-
-  qodana:
-    name: Run code quality monitoring
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2022.3.3
-        env:
-          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
