--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,3 +1,5 @@
+name: release-please
+
 on:
   push:
     branches: [develop]
@@ -8,7 +10,6 @@ on:
         required: true
         type: string
 
-name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
@@ -46,7 +47,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-node-release-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
 
