--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -28,32 +28,12 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         uses: actions/checkout@v3
 
-      - name: Setup node.js
+      - name: Setup Node.js and install NPM dependencies
         if: ${{ steps.release.outputs.release_created }}
-        uses: actions/setup-node@v3
+        uses: ./.github/actions/install-npm-deps
         with:
           node-version: 'lts/*'
           registry-url: 'https://registry.npmjs.org'
-
-      - name: Get npm cache directory
-        if: ${{ steps.release.outputs.release_created }}
-        id: npm-cache-dir
-        shell: bash
-        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
-
-      - name: Restore dependencies cache
-        if: ${{ steps.release.outputs.release_created }}
-        id: npm-cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-release-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        if: ${{ steps.release.outputs.release_created }}
-        run: npm ci
 
       - name: Build library
         if: ${{ steps.release.outputs.release_created }}
