--- a/.github/workflows/qodana-scan.yml
+++ b/.github/workflows/qodana-scan.yml
@@ -21,27 +21,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup node.js
-        uses: actions/setup-node@v3
+      - name: Setup Node.js and install NPM dependencies
+        uses: ./.github/actions/install-npm-deps
         with:
-          node-version: 'lts/*'
-
-      - name: Get npm cache directory
-        id: npm-cache-dir
-        shell: bash
-        run: echo "dir=$(npm config get cache)" >> ${GITHUB_OUTPUT}
-
-      - name: Restore dependencies cache
-        id: npm-cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-qodana-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: Install dependencies
-        run: npm ci
+          npm-cache-key: 'npm-cache-qodana'
 
       - name: Qodana Scan
         uses: JetBrains/qodana-action@v2022.3.4
