--- a/package.json
+++ b/package.json
@@ -31,59 +31,63 @@
     "watch:lib": "ng build ng-in-viewport --watch --configuration=development"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.0",
-    "@angular/cdk": "^15.2.0",
-    "@angular/common": "^15.2.0",
-    "@angular/compiler": "^15.2.0",
-    "@angular/core": "^15.2.0",
-    "@angular/forms": "^15.2.0",
-    "@angular/material": "^15.2.0",
-    "@angular/platform-browser": "^15.2.0",
-    "@angular/platform-browser-dynamic": "^15.2.0",
-    "@angular/router": "^15.2.0",
+    "@angular/animations": "^15.2.8",
+    "@angular/cdk": "^15.2.8",
+    "@angular/common": "^15.2.8",
+    "@angular/compiler": "^15.2.8",
+    "@angular/core": "^15.2.8",
+    "@angular/forms": "^15.2.8",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "^15.2.8",
+    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/router": "^15.2.8",
     "lodash-es": "^4.17.21",
-    "rxjs": "^7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.0",
+    "@angular-devkit/build-angular": "^15.2.7",
     "@angular-eslint/builder": "^15.2.1",
     "@angular-eslint/eslint-plugin": "^15.2.1",
     "@angular-eslint/eslint-plugin-template": "^15.2.1",
     "@angular-eslint/schematics": "^15.2.1",
     "@angular-eslint/template-parser": "^15.2.1",
-    "@angular/cli": "^15.2.0",
-    "@angular/compiler-cli": "^15.2.0",
-    "@commitlint/cli": "^17.4.4",
-    "@commitlint/config-conventional": "^17.4.4",
+    "@angular/cli": "^15.2.7",
+    "@angular/compiler-cli": "^15.2.8",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@ngneat/spectator": "^14.0.0",
-    "@types/jest": "^29.4.0",
-    "@types/lodash-es": "^4.17.6",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "all-contributors-cli": "^6.24.0",
-    "cypress": "^12.7.0",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "@types/jest": "^29.5.1",
+    "@types/lodash-es": "^4.17.7",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "all-contributors-cli": "^6.25.0",
+    "cypress": "^12.11.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "husky": "^8.0.3",
     "is-ci": "^3.0.1",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "jest-preset-angular": "^13.0.0",
-    "lint-staged": "^13.1.2",
-    "ng-mocks": "^14.6.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-preset-angular": "^13.0.1",
+    "lint-staged": "^13.2.2",
+    "ng-mocks": "^14.10.0",
     "ng-packagr": "^15.2.2",
-    "prettier": "2.8.4",
+    "prettier": "2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
-    "ts-jest": "^29.0.5",
+    "ts-jest": "^29.1.0",
     "typescript": "~4.9.5"
   },
   "engines": {
-    "node": ">=18.12.0",
-    "npm": ">=9.4.0"
+    "node": ">=18.0.0",
+    "npm": ">=9.5.0"
+  },
+  "volta": {
+    "node": "18.16.0",
+    "npm": "9.6.5"
   }
 }
