chore: add publishConfig to package.json

--- a/projects/ng-in-viewport/package.json
+++ b/projects/ng-in-viewport/package.json
@@ -23,5 +23,8 @@
   "peerDependencies": {
     "@angular/common": "^14.0.0 || >=15.0.0",
     "@angular/core": "^14.0.0 || >=15.0.0"
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
