--- a/projects/ng-in-viewport/package.json
+++ b/projects/ng-in-viewport/package.json
@@ -17,11 +17,14 @@
     "url": "https://github.com/k3nsei"
   },
   "dependencies": {
-    "lodash-es": "^4.17.20",
+    "lodash-es": "^4.17.21",
     "tslib": "^2.3.0"
   },
   "peerDependencies": {
     "@angular/common": "^14.0.0 || >=15.0.0",
     "@angular/core": "^14.0.0 || >=15.0.0"
+  },
+  "publishConfig": {
+    "provenance": true
   }
 }
