--- a/projects/ng-in-viewport/package.json
+++ b/projects/ng-in-viewport/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/k3nsei/ng-in-viewport.git"
+    "url": "https://github.com/k3nsei/ng-in-viewport.git"
   },
   "license": "MIT",
   "author": {
