ci: add qodana baseline

--- a/.github/workflows/qodana-scan.yml
+++ b/.github/workflows/qodana-scan.yml
@@ -33,6 +33,9 @@ jobs:
         uses: ./.github/actions/install-npm-deps
 
       - name: Qodana Scan
-        uses: JetBrains/qodana-action@v2023.1.0
         env:
           QODANA_TOKEN: ${{ secrets.QODANA_TOKEN }}
+        uses: JetBrains/qodana-action@v2023.1.0
+        with:
+          args: --baseline,qodana.sarif.json
+          cache-default-branch-only: true
