feat: add support for angular v16
Release-As: 16.0.0-rc.0

--- a/projects/demo/tsconfig.spec.json
+++ b/projects/demo/tsconfig.spec.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "module": "CommonJS",
+    "target": "ES2016",
     "types": ["jest"]
   },
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
