--- a/angular.json
+++ b/angular.json
@@ -2,7 +2,6 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "defaultProject": "demo",
   "projects": {
     "ng-in-viewport": {
       "projectType": "library",
@@ -48,7 +47,7 @@
       "prefix": "invp",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:browser-esbuild",
           "options": {
             "outputPath": "dist/demo",
             "index": "projects/demo/src/index.html",
@@ -131,7 +130,7 @@
       "prefix": "invp-ex",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular-devkit/build-angular:browser-esbuild",
           "options": {
             "outputPath": "dist/example",
             "index": "projects/example/src/index.html",
@@ -211,7 +210,6 @@
   },
   "cli": {
     "packageManager": "npm",
-    "defaultCollection": "@ngneat/spectator",
     "schematicCollections": ["@ngneat/spectator", "@angular-eslint/schematics"]
   },
   "schematics": {
