--- a/projects/ng-in-viewport/tsconfig.spec.json
+++ b/projects/ng-in-viewport/tsconfig.spec.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/spec",
     "module": "CommonJS",
+    "target": "ES2016",
     "types": ["jest"]
   },
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
