--- a/package.json
+++ b/package.json
@@ -31,40 +31,40 @@
     "watch:lib": "ng build ng-in-viewport --watch --configuration=development"
   },
   "dependencies": {
-    "@angular/animations": "^16.0.0",
-    "@angular/cdk": "^16.0.0",
-    "@angular/common": "^16.0.0",
-    "@angular/compiler": "^16.0.0",
-    "@angular/core": "^16.0.0",
-    "@angular/forms": "^16.0.0",
-    "@angular/material": "^16.0.0",
-    "@angular/platform-browser": "^16.0.0",
-    "@angular/platform-browser-dynamic": "^16.0.0",
-    "@angular/router": "^16.0.0",
+    "@angular/animations": "~16.0.6",
+    "@angular/cdk": "~16.0.4",
+    "@angular/common": "~16.0.6",
+    "@angular/compiler": "~16.0.6",
+    "@angular/core": "~16.0.6",
+    "@angular/forms": "~16.0.6",
+    "@angular/material": "~16.0.4",
+    "@angular/platform-browser": "~16.0.6",
+    "@angular/platform-browser-dynamic": "~16.0.6",
+    "@angular/router": "~16.0.6",
     "lodash-es": "^4.17.21",
     "rxjs": "^7.8.1",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.13.0"
+    "tslib": "^2.6.0",
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.0",
-    "@angular-eslint/builder": "^16.0.1",
-    "@angular-eslint/eslint-plugin": "^16.0.1",
-    "@angular-eslint/eslint-plugin-template": "^16.0.1",
-    "@angular-eslint/schematics": "^16.0.1",
-    "@angular-eslint/template-parser": "^16.0.1",
-    "@angular/cli": "^16.0.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@ngneat/spectator": "^14.0.0",
-    "@types/jest": "^29.5.1",
+    "@angular-devkit/build-angular": "~16.0.6",
+    "@angular-eslint/builder": "~16.0.3",
+    "@angular-eslint/eslint-plugin": "~16.0.3",
+    "@angular-eslint/eslint-plugin-template": "~16.0.3",
+    "@angular-eslint/schematics": "~16.0.3",
+    "@angular-eslint/template-parser": "~16.0.3",
+    "@angular/cli": "~16.0.6",
+    "@angular/compiler-cli": "~16.0.6",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
+    "@ngneat/spectator": "^15.0.1",
+    "@types/jest": "^29.5.2",
     "@types/lodash-es": "^4.17.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.2",
-    "@typescript-eslint/parser": "^5.59.2",
-    "all-contributors-cli": "^6.25.0",
-    "cypress": "^12.11.0",
-    "eslint": "^8.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "all-contributors-cli": "^6.26.0",
+    "cypress": "^12.16.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
@@ -73,13 +73,13 @@
     "is-ci": "^3.0.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "^13.1.0",
-    "lint-staged": "^13.2.2",
-    "ng-mocks": "^14.10.0",
-    "ng-packagr": "^16.0.0",
+    "jest-preset-angular": "^13.1.1",
+    "lint-staged": "^13.2.3",
+    "ng-mocks": "^14.11.0",
+    "ng-packagr": "^16.0.1",
     "prettier": "2.8.8",
     "prettier-plugin-packagejson": "^2.4.3",
-    "ts-jest": "^29.1.0",
+    "ts-jest": "^29.1.1",
     "typescript": "~5.0.4"
   },
   "engines": {
@@ -87,7 +87,7 @@
     "npm": ">=9.5.0"
   },
   "volta": {
-    "node": "18.16.0",
-    "npm": "9.6.5"
+    "node": "18.16.1",
+    "npm": "9.7.2"
   }
 }
