--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint:demo": "ng lint demo",
     "lint:example": "ng lint example",
     "lint:lib": "ng lint ng-in-viewport",
-    "prepare": "is-ci || husky install",
+    "prepare": "npx --no -- is-ci || npx --no -- husky || true",
     "serve:demo": "ng serve demo",
     "serve:example": "ng serve example",
     "test": "jest --coverage",
@@ -31,60 +31,61 @@
     "watch:lib": "ng build ng-in-viewport --watch --configuration=development"
   },
   "dependencies": {
-    "@angular/animations": "~16.0.6",
-    "@angular/cdk": "~16.0.4",
-    "@angular/common": "~16.0.6",
-    "@angular/compiler": "~16.0.6",
-    "@angular/core": "~16.0.6",
-    "@angular/forms": "~16.0.6",
-    "@angular/material": "~16.0.4",
-    "@angular/platform-browser": "~16.0.6",
-    "@angular/platform-browser-dynamic": "~16.0.6",
-    "@angular/router": "~16.0.6",
+    "@angular/animations": "~17.1.2",
+    "@angular/cdk": "~17.1.2",
+    "@angular/common": "~17.1.2",
+    "@angular/compiler": "~17.1.2",
+    "@angular/core": "~17.1.2",
+    "@angular/forms": "~17.1.2",
+    "@angular/material": "~17.1.2",
+    "@angular/platform-browser": "~17.1.2",
+    "@angular/platform-browser-dynamic": "~17.1.2",
+    "@angular/router": "~17.1.2",
     "lodash-es": "^4.17.21",
     "rxjs": "^7.8.1",
-    "tslib": "^2.6.0",
-    "zone.js": "~0.13.1"
+    "tslib": "^2.6.2",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.0.6",
-    "@angular-eslint/builder": "~16.0.3",
-    "@angular-eslint/eslint-plugin": "~16.0.3",
-    "@angular-eslint/eslint-plugin-template": "~16.0.3",
-    "@angular-eslint/schematics": "~16.0.3",
-    "@angular-eslint/template-parser": "~16.0.3",
-    "@angular/cli": "~16.0.6",
-    "@angular/compiler-cli": "~16.0.6",
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@ngneat/spectator": "^15.0.1",
-    "@types/jest": "^29.5.2",
-    "@types/lodash-es": "^4.17.7",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@angular-devkit/build-angular": "~17.1.2",
+    "@angular-eslint/builder": "~17.2.1",
+    "@angular-eslint/eslint-plugin": "~17.2.1",
+    "@angular-eslint/eslint-plugin-template": "~17.2.1",
+    "@angular-eslint/schematics": "~17.2.1",
+    "@angular-eslint/template-parser": "~17.2.1",
+    "@angular/cli": "~17.1.2",
+    "@angular/compiler-cli": "~17.1.2",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
+    "@ngneat/spectator": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/lodash-es": "^4.17.12",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
     "all-contributors-cli": "^6.26.1",
-    "cypress": "^12.16.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
+    "cypress": "^13.6.4",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.10",
     "is-ci": "^3.0.1",
-    "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-preset-angular": "^13.1.1",
-    "lint-staged": "^13.2.3",
-    "ng-mocks": "^14.11.0",
-    "ng-packagr": "^16.0.1",
-    "prettier": "2.8.8",
-    "prettier-plugin-packagejson": "^2.4.3",
-    "ts-jest": "^29.1.1",
-    "typescript": "~5.0.4"
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "^14.0.0",
+    "lint-staged": "^15.2.1",
+    "ng-mocks": "^14.12.1",
+    "ng-packagr": "^17.1.2",
+    "prettier": "3.2.4",
+    "prettier-plugin-packagejson": "^2.4.10",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.5.0"
+    "node": "18.x || >=20.10.0",
+    "npm": ">=10.0.0"
   },
   "volta": {
     "node": "20.11.0",
