chore(deps): bump angular from v17.1.2 to v17.2.1

--- a/projects/demo-e2e/tsconfig.json
+++ b/projects/demo-e2e/tsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": "./",
     "target": "ES5",
     "lib": ["ES2022", "DOM"],
-    "types": ["cypress", "node"],
+    "types": ["cypress", "node"]
   },
-  "include": ["**/*.ts"],
+  "include": ["**/*.ts"]
 }
